--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -4,6 +4,24 @@
 
 <link rel = "stylesheet" href = "css/bootstrap.css">
 <style>
+div.tooltip{
+	position:absolute;
+	text-align:center;
+	width:60px;
+	height:30px;
+	padding:2px;
+	font: 12px sans-serif;
+	background: lightsteelblue;
+	border: 0px;
+	border-radius: 8px;
+	pointer-events:none;
+}
+
+
+.y.axis line,.y.axis path {
+	fill: none;
+	stroke: rgba(88, 89, 93, .5);
+}
 .axis line {
 	stroke: rgba(88, 89, 93, .12);
 }
@@ -86,8 +104,7 @@ font-familt: Arial Black;
 		<div id = "graphfour" class = "seperator">
 			<div id = "employeetitle" class = "text-center title"> Open Tasks By Type For Mike</div>
 			<div class = "graph"></div>
-		</div>
-	
+		</div>	
 	</div>
 	
 	
